part code review

--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -4140,8 +4140,8 @@ See Section \ref{sec:projmatrix} for possible values for the 'matrix type' keywo
 { \subsubsubsection{NiftyPET}
 }
 \label{sec:projectorpairusingniftypet}
-Both projectors are based on the NiftyPET-wrapped projectors, as detailed
-invididually in the following sections.
+Both projectors are based on the NiftyPET-wrapped projectors [Mar18], as detailed
+individually in the following sections.
 
 { \subsubsubsubsection{Parameters}
 }
@@ -5431,5 +5431,11 @@ reconstruction of PET data. \textit { Phys Med Biol } 47(16): 2947-2960.
 
 {[}Ehr16{]} Ehrhardt M J, Markiewicz P, Liljeroth M, Barnes A, Kolehmainen V, Duncan J, Pizarro L, Atkinson D, Hutton B F, Ourselin S, and others \textbf{(2016)}, 
 PET reconstruction with an anatomical MRI prior using parallel level sets. \textit { IEEE Trans Med Imaging } 35(9): 2189-2195.
+
+[Mar18] Markiewicz P J, Ehrhardt M J, Erlandsson K, Noonan P J, Barnes A, Schott J M, 
+Atkinson D, Arridge S R, Hutton B F, Ourselin S \textbf{(2018)}, 
+NiftyPET: a High-throughput Software Platform for High 
+Quantitative Accuracy and Precision PET Imaging and Analysis.
+\textit { Neuroinformatics }, 16(1): 95-115.
 
 \end{document}
