fixed typos in the UsersGuide [ci skip]
found by rijobro

--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -1985,7 +1985,7 @@ is underestimated. The mean value of the two scatter estimates can be used for s
 iterations are usually enough to estimate a good approximation of scatter.
 
 There are a lot of parameters that can be set in scatter estimation. It is highly recommended to use
-the example parameter files provided in the \textt{examples} folder. In particular, you could check
+the example parameter files provided in the \texttt{examples} folder. In particular, you could check
 the fully working example for a NEMA phantom provides for the Siemens mMR.
 
 \cmdline{%
@@ -2114,7 +2114,7 @@ create\_tail\_mask\_from\_ACFs		--ACF-filename <projdata> \textbackslash \\
 \end{description}
 
 The following utility can be used to manually upsample with tail-fitting. Its underlying code is used in
-the \textt{scatter\_estimate} utility above.
+the \texttt{scatter\_estimate} utility above.
 
 \cmdline{%
 upsample\_and\_fit\_single\_scatter \textbackslash \\
