--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -678,12 +678,33 @@ You need to create a text file header for your ROOT file
 to specify the scanner (as this information is not stored in the ROOT file).
 We tend to name this header \texttt{something.hroot} but this is not mandatory.
 
-\textbf{Warning:} There is currently no check if the scanner information is correct. This
-  is dangerous for the geometry, but can also lead to crashes if the actual number of 
-  blocks/crystals etc is larger than what is specified in the scanner info.
-
 We currently support only ROOT output using the CylindricalPET and ECAT systems
 from GATE.
+
+\textbf{Warning:} There is a check of consistent scanner geometry information between \textit{STIR} 
+and OpenGATE as discrepancies can lead to crashes if the actual number of blocks/crystals etc is 
+larger than what is specified in the scanner info.
+
+An OpenGATE scanner geometry is modular. For CylindricalPET, \textit{STIR} uses the conversion 
+scheme detailed in Table \ref{tab:STIR-OpenGATE_terminology}.
+
+\begin{table}[h]
+    \centering
+        \begin{tabular}{ |c | c| }
+            \hline
+            \textbf{GATE} & \textbf{STIR}  \\ 
+            \hline
+            Crystal & Crystal  \\  
+            Submodule & Block  \\
+            Module & Bucket  \\
+            Rsector & Buckets around the ring  \\
+            \hline
+        \end{tabular}
+    \caption{A guide on the terminology equivalents between STIR and OpenGATE for CylindricalPET 
+    scanner geometries.}
+    \label{tab:STIR-OpenGATE_terminology}
+\end{table}
+
 
 A full example is given in \texttt{examples/samples/root\_header.hroot}. Below are
 2 shorter examples.
@@ -714,13 +735,37 @@ Average depth of interaction (cm)        := 0.7
 Distance between rings (cm)              := 0.40625
 Default bin size (cm)                    := 0.208626
 Maximum number of non-arc-corrected bins := 344
+Default number of arc-corrected bins     := 344
+View offset (degrees)                    := 0
 
 GATE scanner type := GATE_Cylindrical_PET
 GATE_Cylindrical_PET Parameters :=
   ; name of the actual ROOT file
   name of data file := mysim.root
 
-  ; See elsewhere for other parameters
+  ; root tree chain to use
+  name of input TChain := Coincidences
+
+  ; Gate scanner geometry terminology used to check scanner properties
+  number of Rsectors := 504 
+  number of modules_X := 1 
+  number of modules_Y := 1
+  number of modules_Z := 1
+  number of submodules_X := 1
+  number of submodules_Y := 1
+  number of submodules_Z := 1
+  number of crystals_X := 1
+  number of crystals_Y := 1
+  number of crystals_Z := 4
+
+  Singles readout depth := 1
+  exclude scattered events := 0
+  exclude random events := 0 
+  offset (num of detectors) := 0 
+
+  low energy window (keV) := 0      ; Default 0
+  upper energy window (keV):= 10000 ; Default 10000
+
 End GATE_Cylindrical_PET Parameters :=
 
 end ROOT header := 
