--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -2891,13 +2891,18 @@ This is a test-release of a program that can be used to find
 ROI values for an image. See the online documentation generated 
 by doxygen for more info.
 
-{ \subsubsubsection{extract\_dynamic\_images}
+{ \subsubsubsection{extract\_single\_images\_from\_dynamic\_image}
 }
 
 This executable can be used to get the individual components of a 
 dynamic image as separate images. 
 To use it, simply give the pattern of the output filename, the input filename, and optionally
 supply a parameter file for the file-format used to save the output images.
+
+{ {\subsubsubsection{extract\_single\_images\_from\_parametric\_image}
+}
+
+As above but for parametric images.
 
 { \subsubsubsection{create\_multi\_header}
   This is a command line utility for creating a header that "points" to several other
